@@ -389,7 +389,7 @@ The main portion of the rule builder interface is built w/  app.ext.admin.i.DMIC
 
 	<label data-app-role='pricingScheduleContainer'>
 		<span>Pricing Schedule:</span>
-		<select name='schedule' data-bind="var: rss(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+		<select name='schedule' data-bind="var: rss(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select>
 	</label>
