@@ -337,7 +337,7 @@
 
 	<label>
 		<span>Pricing Schedule</span>
-		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select>
 		<span class='hint'>Requires Wholesale Bundle</span>
@@ -400,7 +400,7 @@ HINT: The username, password, etc. are provided by Google Sitemap.
 
 	<label>
 		<span>Pricing Schedule</span>
-		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select>
 		<span class='hint'>Requires Wholesale Bundle</span>
@@ -454,7 +454,7 @@ http://webapi.zoovy.com/webapi/nextag/index.cgi/sporks.D4FB7659.txt
 
 	<label>
 		<span>Pricing Schedule</span>
-		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select>
 		<span class='hint'>Requires Wholesale Bundle</span>
@@ -508,7 +508,7 @@ http://webapi.zoovy.com/webapi/nextag/index.cgi/sporks.D4FB7659.txt
 	
    <tr>
       <td valign="top">Pricing Schedule:</td>
-      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select> <i>(Requires Wholesale Bundle)</i></td>
    </tr>
@@ -581,7 +581,7 @@ These settings *MUST* match the settings in your Buy.com account.
 		
 <label>
 	<span>Pricing Schedule</span>
-	<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+	<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 		<option value=''>none</option>
 	</select>
 </label>
@@ -634,7 +634,7 @@ HINT: The username, password, etc. are provided by HSN.com. These settings *MUST
 </tr>
 <tr>
   <td>Pricing Schedule:</td>
-  <td><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <td><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select> <i>(Requires Wholesale Bundle)</i></td>
 </tr>
@@ -683,7 +683,7 @@ CommissionJunction.</p>
 	
    <tr>
       <td valign="top">Pricing Schedule:</td>
-      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select> <i>(Requires Wholesale Bundle)</i></td>
    </tr>
@@ -727,7 +727,7 @@ These settings *MUST* match the settings in your BestBuy Marketplace account.
 	
    <tr>
       <td valign="top">Pricing Schedule:</td>
-      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select> <i>(Requires Wholesale Bundle)</i><br></td>
    </tr>
@@ -777,7 +777,7 @@ HINT: The username, password, etc. are provided by PriceGrabber.com.
 	
    <tr>
       <td valign="top">Pricing Schedule:</td>
-      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+      <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select> <i>(Requires Wholesale Bundle)</i><br></td>
    </tr>
@@ -1009,7 +1009,7 @@ HINT: The username, password, etc. are provided by Amazon Product Ads. These set
 
 	<label>
 		<span>Pricing Schedule</span>
-		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+		<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option value=''>none</option>
 		</select>
 	</label>
@@ -1051,7 +1051,7 @@ HINT: The username, password, etc. are provided by Amazon Product Ads. These set
 <p class="hint">Checkbox must be selected or syndication will not be attempted.</p>
 <label>
 	<span>Pricing Schedule</span>
-	<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+	<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 		<option value=''>none</option>
 	</select>
 </label>
@@ -1080,7 +1080,7 @@ SOMETHING SHOULD GO HERE!!!
 </label>
 <label>
 	<span>Pricing Schedule</span>
-	<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+	<select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 		<option value=''>none</option>
 	</select>
 </label>
@@ -1119,7 +1119,7 @@ SOMETHING SHOULD GO HERE!!!
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1163,7 +1163,7 @@ These settings *MUST* match the settings in your Shopping.com account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1206,7 +1206,7 @@ These settings *MUST* match the settings in your TheFind.com account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1260,7 +1260,7 @@ These settings *MUST* match the settings in your bing.com account.
 	</tr>
 <tr>
   <td valign="top">Pricing Schedule:</td>
-  <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i><br></td>
 </tr>
@@ -1307,7 +1307,7 @@ These settings *MUST* match the settings in your Shopzilla account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1350,7 +1350,7 @@ These settings *MUST* match the settings in your pronto.com account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1391,7 +1391,7 @@ These settings *MUST* match the settings in your become.com account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1433,7 +1433,7 @@ These settings *MUST* match the settings in your smarter.com account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1491,7 +1491,7 @@ HINT: The username, password, etc. are provided by Dijipop.com. These settings *
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
@@ -1563,7 +1563,7 @@ HINT: The username, password, etc. are provided by LinkShare.com. These settings
 
 <tr>
   <td valign="top">Pricing Schedule:</td>
-  <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <td valign="top"><select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i></td>
 </tr>
@@ -1611,7 +1611,7 @@ These settings *MUST* match the settings in your Sears account.
 
 <label>
   Pricing Schedule:
-  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+  <select name='SCHEDULE' data-bind="var: mkt(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 	<option value=''>none</option>
 </select> <i>(Requires Wholesale Bundle)</i>
 </label>
