@@ -1340,7 +1340,7 @@ ACHIEVEMENTS
 	
 	<label>
 		<span>Pricing Schedule:</span>
-		<select name='schedule' data-bind="var: rss(@SCHEDULES);format:optionsFromList; text:id; value:id;">
+		<select name='schedule' data-bind="var: rss(@SCHEDULES);format:optionsFromList; text:SID; value:SID;">
 			<option>none</option>
 		</select>
 	</label>
